--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Alishba's Resume</title>
 </head>
 <body>
-<img width="200px;"src="file:///Users/user/Desktop/Screenshot%202024-05-18%20at%2013.05.30.jpeg" alt="Alishb's Malik photo">
+<img width="200px;"src="file:///Users/user/Desktop/alishba.jpeg" alt="Alishb's Malik photo">
 <h1>Alishba Malik</h1>
 <a  target="_blank"href="https://www.linkedin.com/in/alishba-malik-ba1401278?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">About me</a><hr>
 <br><p>Kazi Muhalla Dargah road Pir Jo goth</p>
